@@ -45,8 +45,8 @@
     "chai": "^4.1.2",
     "core-js": "^2.5.7",
     "eslint": "^4.19.1",
-    "futoin-asyncsteps": "^2.0.0",
-    "grunt": "^1.0.2",
+    "futoin-asyncsteps": "^2.1.1",
+    "grunt": "^1.0.3",
     "grunt-babel": "^7.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-eslint": "^20.1.0",
@@ -57,9 +57,9 @@
     "grunt-webpack": "^3.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
-    "webpack": "^4.10.2"
+    "webpack": "^4.12.0"
   },
   "peerDependencies": {
-    "futoin-asyncsteps": "^2.0.0"
+    "futoin-asyncsteps": "^2.1.1"
   }
 }
